--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,3 @@
-@import url(https://myfonts.ru/myfonts?fonts=mariupol);
-@import url(https://fonts.googleapis.com/css?family=Inter:regular,500,600,700,800,900);
-@import url(https://fonts.cdnfonts.com/css/neutral-face);
 * {
   margin: 0;
   padding: 0;
@@ -77,6 +74,7 @@ a {
 }
 
 .wrap {
+  position: relative;
   overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -118,7 +116,7 @@ a {
 }
 .main__subBlock{
   display: flex;
-  text-align: center;
+  align-items: center;
   gap: 10px;
 }
 .block-row-first,
@@ -149,7 +147,7 @@ a {
   width: 100%;
   align-items: left;
   flex-direction: column;
-  gap: 40px;
+  gap: 80px;
 }
 .main__title {
 }
@@ -203,31 +201,35 @@ a {
 .info-second-text {
   font-size: 18px;
 }
+.main__title{
+  font-size: 56px;
+}
 .main__button-btn {
   display: flex;
   width: 50%;
   padding: 10px 60px;
-  background-color: #fff;
+  background-color: #B39F7A;
   justify-content: space-between;
   align-items: center;
   border-radius: 100px;
   font-size: 26px;
+  z-index: 9999;
+  bottom: 5%;
   font-weight: bold;
-  color: #151515;
+  color: #fff;
+  border: 1px solid #151515;
+  position: fixed;
   transition: all 0.4s ease 0s;
 }
 .main__button-btn:hover{
-  color: #fff;
-  border: 1px solid #fff;
-  background-color: transparent;
   scale: 1.1;
 }
 
 .main__button-discount {
   border-radius: 100%;
-  background-color: #265DF2;
+  background-color: #fff;
   padding: 20px;
-  color: #fff;
+  color: #B39F7A;
   font-weight: 400;
   font-size: 20px;
 }
@@ -291,11 +293,9 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 400px;
-  height: 100px;
   text-align: center;
   border-radius: 20px;
-  padding: 15px 30px;
+  padding: 25px 60px;
   border: 1px solid #151515;
   transition: all 0.4s ease 0s;
 }
@@ -625,7 +625,6 @@ a {
 }
 /*-----------------------------*/
 .page__slider {
-  padding: 200px 0px;
   background-color: #fff;
   position: relative;
 }
@@ -714,7 +713,7 @@ a {
   left: 0;
 }
 .swiper-pagination-bullet {
-  color: #fff;
+  color: #151515;
   opacity: 1;
 
 }
@@ -733,7 +732,7 @@ a {
   color: #151515;
 }
 .about {
-  padding: 100px 0px;
+  padding: 20px 0px;
 }
 .about__container {
 }
@@ -897,6 +896,7 @@ a {
   .target__text,
   .target__listItem{
     width: 100%;
+    font-size: 18px;
   }
   .about__title {
     font-size: 36px;
@@ -910,6 +910,10 @@ a {
   }
   .accordion{
     padding: 20px 0px;
+  }
+  .main__text{
+    text-align: center;
+    font-size: 18px;
   }
 }
 @media(max-width:599.98px){
@@ -973,5 +977,11 @@ a {
 }
 .courseProgram__block{
   padding: 10px;
+}
+.about__subtitle{
+  font-size: 20px;
+}
+.about__li{
+  font-size: 16px;
 }
 }
