--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,7 @@ a {
 }
 
 .main {
-  height: 140vh;
+  height: 120vh;
   padding: 20px 0px;
   position: relative;
 }
@@ -324,7 +324,7 @@ a {
 }
 .accordion .label {
   position: relative;
-  padding: 20px 0;
+  padding: 20px 10px;
   font-size: 24px;
   width: 100%;
   color: #fff;
@@ -629,6 +629,7 @@ a {
   position: relative;
 }
 .swiper{
+  align-items: center;
   padding: 50px 0px;
 }
 .slider__title {
@@ -664,6 +665,7 @@ a {
 .slide-content {
   display: flex;
   overflow: hidden;
+  align-items: center;
   margin: 0 40px;
 }
 .button{
@@ -680,7 +682,9 @@ a {
 .button:hover{
   background-color: #265DF2;
 }
-
+.swiper-wrapper{
+  align-items: center !important;
+}
 .slider__bg {
   position: absolute;
   width: 100%;
@@ -904,6 +908,9 @@ a {
   .main__button-btn{
     width: 80%;
   }
+  .main__title{
+    font-size: 36px;
+  }
   .courseProgram__text{
     font-size: 16px;
     line-height: 24px;
@@ -921,9 +928,21 @@ a {
     gap: 0;
     flex-direction: column;
   }
+  .block-row{
+    width: 100%;
+    flex-direction: column;
+  }
+  .btn-info{
+    width: 100%;
+    flex-direction: column;
+  }
+
   .courseProgram__title{
     font-size: 26px;
     width: 100%;
+  }
+  .target__title{
+    font-size: 36px;
   }
   .main__button-btn{
     width: 100%;
