--- a/css/main.css
+++ b/css/main.css
@@ -162,7 +162,8 @@ a {
   display: flex;
   gap: 20px;
 }
-.main__bg{
+.main__bg,
+.course__bg{
   position: absolute;
         top: 0;
         left: 0;
@@ -208,7 +209,7 @@ a {
   display: flex;
   width: 50%;
   padding: 10px 60px;
-  background-color: #B39F7A;
+  background-color: #fff;
   justify-content: space-between;
   align-items: center;
   border-radius: 100px;
@@ -216,8 +217,8 @@ a {
   z-index: 9999;
   bottom: 5%;
   font-weight: bold;
-  color: #fff;
-  border: 1px solid #151515;
+  color: #151515;
+  box-shadow: 1px -1px 15px rgb(0 0 0 / 30%);
   position: fixed;
   transition: all 0.4s ease 0s;
 }
@@ -227,9 +228,9 @@ a {
 
 .main__button-discount {
   border-radius: 100%;
-  background-color: #fff;
+  background-color: #B39F7A;
   padding: 20px;
-  color: #B39F7A;
+  color: #fff;
   font-weight: 400;
   font-size: 20px;
 }
@@ -431,6 +432,17 @@ a {
   background-color: #B39F7A;
   border-radius: 160px;
 }
+.courseBackground{
+  color: #fff;
+  background-color: transparent;
+}
+.dest-block{
+  justify-content: center !important;
+  background-color: transparent;
+}
+.dest-block .courseProgram__text{
+  color: #fff;
+}
 .courseProgram__image {
 }
 .courseProgram__text {
@@ -454,7 +466,16 @@ a {
   content: '-';
   font-size: 30px;
 }
-
+.content {
+}
+.list-content {
+  display: flex;
+  flex-direction: column;
+}
+.content__li {
+  padding-left: 20px;
+  list-style: none;
+}
 /*---------------------------------*/
 .page__course {
   padding: 100px 0px;
@@ -498,6 +519,11 @@ a {
 }
 .content__text {
   color: #151515;
+}
+.courseBackground{
+  position: relative;
+  height: auto;
+  padding: 60px 0px;
 }
 .content__link {
   color: #151515;
@@ -544,46 +570,6 @@ a {
   color: #151515;
 }
 /*---------------------------------*/
-/* .page__courseResult {
-}
-.courseResult {
-}
-.courseResult__container {
-}
-._container {
-}
-.courseResult__body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 40px;
-}
-.courseResult__title {
-}
-.courseResult__aside {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
-  justify-content: center;
-}
-.courseResult__block {
-  align-items: center;
-  padding: 20px 40px;
-  width: 70%;
-  display: flex;
-  gap: 40px;
-  background-color: #fff;
-  border-radius: 20px;
-  justify-content: center;
-}
-.courseResult__image {
-}
-.courseResult__text {
-  width: 60%;
-  color: #151515;
-} */
 /*---------------------------------------------------------*/
 
 .event__icon1,
@@ -904,6 +890,7 @@ a {
   }
   .about__title {
     font-size: 36px;
+    text-align: center;
   }
   .main__button-btn{
     width: 80%;
@@ -925,11 +912,12 @@ a {
 }
 @media(max-width:599.98px){
   .main{
-    height: auto !important;
+    height: auto;
   }
   .block-row-first, .block-row-second{
     gap: 0;
-    flex-direction: column;
+    padding: 20px;
+    justify-content: space-between;
   }
   .block-row{
     width: 100%;
@@ -939,7 +927,17 @@ a {
     width: 100%;
     flex-direction: column;
   }
-
+  .main__text{
+    text-align: center;
+    font-size: 14px;
+    line-height: 20px;
+  }
+  .main__subtitle{
+    font-size: 20px;
+  }
+  .main__block-hero{
+    gap: 5px;
+  }
   .courseProgram__title{
     font-size: 26px;
     width: 100%;
@@ -1005,8 +1003,12 @@ a {
 }
 .about__subtitle{
   font-size: 20px;
+  text-align: center;
 }
 .about__li{
   font-size: 16px;
+}
+.courseProgram__text{
+  width: 100%;
 }
 }
